--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Bobril - Component oriented framework</title></head><body><script type="text/javascript" src="a.js" charset="utf-8"></script></body></html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Bobril - Component oriented framework</title></head><body><script type="text/javascript" src="dist/a.js" charset="utf-8"></script></body></html>
